@@ -6,8 +6,10 @@ import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.finalpro.start.dto.PlaceDTO;
@@ -18,113 +20,135 @@ import com.finalpro.start.util.kakaoUtil.KakaoDirections.Route;
 import com.finalpro.start.util.kakaoUtil.KakaoDirections.Route.Section;
 import com.finalpro.start.util.kakaoUtil.KakaoDirections.Route.Section.Road;
 
-
 public class KakaoApiUtil {
 
-	private static final String REST_API_KEY = "448274e35c1f29a434d87a9242405056";
+    private static final String REST_API_KEY = "448274e35c1f29a434d87a9242405056";
 
-	public static List<PlaceDTO> getPlaceByKeyWord(String keyword, PlaceDTO center)
-			throws IOException, InterruptedException {
+    public static List<PlaceDTO> getPlaceByKeyWord(String keyword, PlaceDTO center)
+            throws IOException, InterruptedException {
 
-		HttpClient client = HttpClient.newHttpClient();
-		String url = "https://dapi.kakao.com/v2/local/search/keyword.JSON";
-		url += "?query=" + URLEncoder.encode(keyword, "UTF-8");
-		url += "&x=" + center.getX();
-		url += "&y=" + center.getY();
-		HttpRequest request = HttpRequest.newBuilder().header("Authorization", "KakaoAK " + REST_API_KEY)
-				.uri(URI.create(url)).GET().build();
+        HttpClient client = HttpClient.newHttpClient();
+        String url = "https://dapi.kakao.com/v2/local/search/keyword.JSON";
+        url += "?query=" + URLEncoder.encode(keyword, StandardCharsets.UTF_8);
+        url += "&x=" + URLEncoder.encode(center.getX().toString(), StandardCharsets.UTF_8);
+        url += "&y=" + URLEncoder.encode(center.getY().toString(), StandardCharsets.UTF_8);
+        HttpRequest request = HttpRequest.newBuilder().header("Authorization", "KakaoAK " + REST_API_KEY)
+                .uri(URI.create(url)).GET().build();
 
-		HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-		String responseBody = response.body();
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        String responseBody = response.body();
 
-		KakaoAddress kakaoAddress = new ObjectMapper().readValue(responseBody, KakaoAddress.class);
-		List<Document> documents = kakaoAddress.getDocuments();
+        KakaoAddress kakaoAddress = new ObjectMapper().readValue(responseBody, KakaoAddress.class);
+        List<Document> documents = kakaoAddress.getDocuments();
 
-		if (documents == null || documents.isEmpty()) {
-			System.out.print("documents is null or empty");
-			return null;
-		}
+        if (documents == null || documents.isEmpty()) {
+            System.out.print("documents is null or empty");
+            return null;
+        }
 
-		// 이후의 코드는 documents가 null이 아니고 비어있지 않은 경우에만 실행됩니다.
+        List<PlaceDTO> placeList = new ArrayList<>();
+        for (Document document : documents) {
+            PlaceDTO placeDto = new PlaceDTO(document.getX(), document.getY());
+            placeList.add(placeDto);
+        }
+        return placeList;
+    }
 
-		List<PlaceDTO> placeList = new ArrayList<>();
-		for (Document document : documents) {
-			PlaceDTO placeDto = new PlaceDTO(document.getX(), document.getY());
-			placeList.add(placeDto);
+    public static List<PlaceDTO> getVehiclePaths(PlaceDTO from, PlaceDTO to, List<PlaceDTO> waypoints, String priority)
+            throws IOException, InterruptedException {
 
-		}
-		return placeList;
-	}
+        HttpClient client = HttpClient.newHttpClient();
+        StringBuilder url = new StringBuilder("https://apis-navi.kakaomobility.com/v1/directions");
 
-	public static List<PlaceDTO> getVehiclePaths(PlaceDTO from, PlaceDTO to, PlaceDTO waypoint, String priority)
-	        throws IOException, InterruptedException {
+        url.append("?origin=").append(URLEncoder.encode(from.getX() + "," + from.getY(), StandardCharsets.UTF_8));
+        url.append("&destination=").append(URLEncoder.encode(to.getX() + "," + to.getY(), StandardCharsets.UTF_8));
+        url.append("&priority=").append(URLEncoder.encode(priority, StandardCharsets.UTF_8));
 
-	    HttpClient client = HttpClient.newHttpClient();
-	    String url = "https://apis-navi.kakaomobility.com/v1/directions";
+        if (waypoints != null && !waypoints.isEmpty()) {
+            String waypointsParam = waypoints.stream()
+                    .map(wp -> wp.getX() + "," + wp.getY())
+                    .collect(Collectors.joining("|"));
+            // URL 인코딩 처리
+            waypointsParam = URLEncoder.encode(waypointsParam, StandardCharsets.UTF_8.toString());
+            url.append("&waypoints=").append(waypointsParam);
+        }
 
-	    url += "?origin=" + from.getX() + "," + from.getY();
-	    url += "priority=" + "DISTANCE";
-	    if(waypoint != null) {
-	        url += "&waypoints=" + waypoint.getX() + "," + waypoint.getY();
-	    }
-	    url += "&destination=" + to.getX() + "," + to.getY();
+        // 요청 URL을 로깅하여 확인
+        System.out.println("Request URL: " + url.toString());
 
-	    HttpRequest request = HttpRequest.newBuilder()
-	            .header("Authorization", "KakaoAK " + REST_API_KEY)
-	            .header("Content-Type", "application/json")
-	            .uri(URI.create(url))
-	            .GET()
-	            .build();
-	    HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-	    String responseBody = response.body();
+        HttpRequest request = HttpRequest.newBuilder()
+                .header("Authorization", "KakaoAK " + REST_API_KEY)
+                .header("Content-Type", "application/json")
+                .uri(URI.create(url.toString()))
+                .GET()
+                .build();
 
-	    List<PlaceDTO> placeList = new ArrayList<PlaceDTO>();
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        String responseBody = response.body();
 
-	    KakaoDirections kakaoDirections = new ObjectMapper().readValue(responseBody, KakaoDirections.class);
-	    List<Route> routes = kakaoDirections.getRoutes();
-	    for (Route route : routes) {
-	        List<Section> sections = route.getSections();
-	        for (Section section : sections) {
-	            List<Road> roads = section.getRoads();
-	            for (Road road : roads) {
-	                List<Double> vertexes = road.getVertexes();
-	                for (int i = 0; i < vertexes.size(); i++) {
-	                    placeList.add(new PlaceDTO(vertexes.get(i), vertexes.get(++i)));
-	                }
-	            }
-	        }
-	    }
-	    return placeList;
-	}
+        // 응답 본문을 로깅하여 확인
+        System.out.println("Response Body: " + responseBody);
+
+        if (response.statusCode() != 200) {
+            throw new IOException("HTTP error code : " + response.statusCode());
+        }
+
+        // JSON 응답 확인
+        ObjectMapper objectMapper = new ObjectMapper();
+        KakaoDirections kakaoDirections;
+        try {
+            kakaoDirections = objectMapper.readValue(responseBody, KakaoDirections.class);
+        } catch (Exception e) {
+            System.err.println("Failed to parse response: " + e.getMessage());
+            e.printStackTrace();
+            return new ArrayList<>(); // 빈 리스트 반환
+        }
+
+        List<PlaceDTO> placeList = new ArrayList<>();
+
+        List<KakaoDirections.Route> routes = kakaoDirections.getRoutes();
+        for (KakaoDirections.Route route : routes) {
+            List<KakaoDirections.Route.Section> sections = route.getSections();
+            for (KakaoDirections.Route.Section section : sections) {
+                List<KakaoDirections.Route.Section.Road> roads = section.getRoads();
+                for (KakaoDirections.Route.Section.Road road : roads) {
+                    List<Double> vertexes = road.getVertexes();
+                    for (int i = 0; i < vertexes.size(); i += 2) { // i를 2씩 증가시킴
+                        placeList.add(new PlaceDTO(vertexes.get(i + 1), vertexes.get(i)));
+                    }
+                }
+            }
+        }
+
+        return placeList;
+    }
 
 
+    public static PlaceDTO getPointByAddress(String address) throws IOException, InterruptedException {
+        HttpClient client = HttpClient.newHttpClient();
+        String url = "https://dapi.kakao.com/v2/local/search/address.json";
+        url += "?query=" + URLEncoder.encode(address, StandardCharsets.UTF_8);
+        HttpRequest request = HttpRequest.newBuilder()//
+                .header("Authorization", "KakaoAK " + REST_API_KEY)//
+                .uri(URI.create(url))//
+                .GET()//
+                .build();
 
+        System.out.println(request.headers());
 
-	public static PlaceDTO getPointByAddress(String address) throws IOException, InterruptedException {
-		HttpClient client = HttpClient.newHttpClient();
-		String url = "https://dapi.kakao.com/v2/local/search/address.json";
-		url += "?query=" + URLEncoder.encode(address, "UTF-8");
-		HttpRequest request = HttpRequest.newBuilder()//
-				.header("Authorization", "KakaoAK " + REST_API_KEY)//
-				.uri(URI.create(url))//
-				.GET()//
-				.build();
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        String responseBody = response.body();
+        System.out.println(responseBody);
 
-		System.out.println(request.headers());
-
-		HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-		String responseBody = response.body();
-		System.out.println(responseBody);
-
-		KakaoAddress kakaoAddress = new ObjectMapper().readValue(responseBody, KakaoAddress.class);
-		List<Document> documents = kakaoAddress.getDocuments();
-		if (documents.isEmpty()) {
-			return null;
-		}
-		Document document = documents.get(0);
-		PlaceDTO placeDTO = new PlaceDTO();
-	    placeDTO.setX(document.getX());
-	    placeDTO.setY(document.getY());
-	    return placeDTO;
-	}
+        KakaoAddress kakaoAddress = new ObjectMapper().readValue(responseBody, KakaoAddress.class);
+        List<Document> documents = kakaoAddress.getDocuments();
+        if (documents.isEmpty()) {
+            return null;
+        }
+        Document document = documents.get(0);
+        PlaceDTO placeDTO = new PlaceDTO();
+        placeDTO.setX(document.getX());
+        placeDTO.setY(document.getY());
+        return placeDTO;
+    }
 }
